@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.wdrrockpalast" name="WDR Rockpalast" version="1.0.5" provider-name="xycl">
+<addon id="plugin.video.wdrrockpalast" name="WDR Rockpalast" version="1.0.6" provider-name="xycl">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="default.py">
         <provides>video</provides>
-        <provides>audio</provides>
     </extension>
     <extension point="xbmc.python.pluginsource" library="default.py">
         <provides>audio</provides>
@@ -14,7 +13,7 @@
         <platform>all</platform>
         <summary lang="de">Zugriff auf die WDR Rockpalast Konzerte</summary>
         <summary lang="en">Plays WDR Rockpalast concerts</summary>
-        <description lang="de">Zugriff auf die WDR Rockpalast Konzerte</description>
-        <description lang="en">Plays WDR Rockpalast concerts</description>
+        <description lang="de">Spielt die Konzerte, die der WDR auf http://www.wdr.de z.V. stellt.</description>
+        <description lang="en">Plays concerts from german TV called WDR which can be found on http://www.wdr.de</description>
     </extension>
 </addon>
